# embedded-comms-template

./: .gitignore  protobuf_serial.py
embedded/: CMakeLists.txt
embedded/src/: CMakeLists.txt  main.c
scripts/: generated.proto  generated_pb2.py
